--- a/index.html
+++ b/index.html
@@ -4848,6 +4848,79 @@ Monograms is not responsible for damages to customer provided items. There is an
         </div>
     </div>
 </div>
+<div class="section-card pui-mt-10px">
+    <div class="data-table-container">
+        <table class="data-table">
+            <colgroup>
+                <col style="width: 50%;">
+                <col style="width: 15%;">
+                <col style="width: 15%;">
+                <col style="width: 20%;">
+            </colgroup>
+            <thead>
+                <tr>
+                    <th>Description</th>
+                    <th class="text-center">Qty</th>
+                    <th class="text-right">Unit Price</th>
+                    <th class="text-right">Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Item</td>
+                    <td class="text-center">860</td>
+                    <td class="text-right">$1.3500</td>
+                    <td class="text-right">$1,161.00</td>
+                </tr>
+                <tr>
+                    <td>Setup</td>
+                    <td class="text-center">1</td>
+                    <td class="text-right">$50.0000</td>
+                    <td class="text-right">$50.00</td>
+                </tr>
+                <tr>
+                    <td>PMS</td>
+                    <td class="text-center">1</td>
+                    <td class="text-right">$20.0000</td>
+                    <td class="text-right">$20.00</td>
+                </tr>
+                <tr>
+                    <td>Imprint information: Full Front | Size: 10" w x 7" h</td>
+                    <td class="text-center">1</td>
+                    <td class="text-right">$0.0000</td>
+                    <td class="text-right">$0.00</td>
+                </tr>
+                <tr>
+                    <td>Factory Art Charge</td>
+                    <td class="text-center">1</td>
+                    <td class="text-right">$35.0000</td>
+                    <td class="text-right">$35.00</td>
+                </tr>
+               
+            </tbody>
+        </table>
+    </div>
+    <!-- PO Overrides -->
+    <div class="pui-row pui-mt-15px">
+        <div class="pui-col-md-3">
+            <div class="form-group">
+                <label for="poCostOverride">PO Cost Override</label>
+                <div class="date-input">
+                    <span class="currency-symbol">$</span>
+                    <input type="text" class="form-control" id="poCostOverride" value="0">
+                </div>
+            </div>
+        </div>
+        <div class="pui-col-md-3">
+            <div class="form-group">
+
+                <label for="poQtyOverride">PO Quantity Override</label>
+
+                <input type="text" class="form-control pui-mt-5px">
+            </div>
+        </div>
+    </div>
+</div>
 
                                  </div>
                                 <div class="section-card">
@@ -4861,26 +4934,7 @@ Monograms is not responsible for damages to customer provided items. There is an
 
 
 
-                                    <!-- PO Overrides -->
-                                    <div class="pui-row pui-mt-15px">
-                                        <div class="pui-col-md-6">
-                                            <div class="form-group">
-
-
-                                                <label for="poCostOverride">PO Cost Override</label>
-
-                                                <input type="text" class="form-control pui-mt-5px">
-                                            </div>
-                                        </div>
-                                        <div class="pui-col-md-6">
-                                            <div class="form-group">
-
-                                                <label for="poQtyOverride">PO Quantity Override</label>
-
-                                                <input type="text" class="form-control pui-mt-5px">
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
 
                                     <!-- Coupon Code -->
                                     <div class="pui-row pui-mt-15px">
