--- a/index.html
+++ b/index.html
@@ -4990,8 +4990,7 @@ Monograms is not responsible for damages to customer provided items. There is an
 <div class="section-card pui-mt-10px">
     <div class="form-group">
         <label>General Note</label>
-        <textarea class="form-control" rows="3">
-            Please make sure sleeve logos are printed at correct size. They were incorrect last year.
+        <textarea class="form-control" rows="3">Please make sure sleeve logos are printed at correct size. They were incorrect last year.
         </textarea>
     </div>
     <div class="form-group" style="margin-top: 20px;">
