--- a/index.html
+++ b/index.html
@@ -4078,7 +4078,9 @@ Monograms is not responsible for damages to customer provided items. There is an
                         <div class="pui-col-md-12 pui-col-xxl-9">
 
                             <div class="section-card pui-mb-10px">
-                                <h3 class="section-title">PO Builder for Order # OE-125466</h3>
+                                <div class="pui-row">
+                                    <div class="pui-col-md-6">
+<h3 class="section-title">PO Builder for Order # OE-125466</h3>
 
                                 <!-- Line Item Selection -->
                                 <div class="form-group pui-mb-none">
@@ -4090,6 +4092,44 @@ Monograms is not responsible for damages to customer provided items. There is an
                                         </select>
                                     </div>
                                 </div>
+                                    </div>
+                                    <div class="pui-col-md-6">
+                                        <div class="po-actions-container">
+                                            <table class="data-table po-actions-table pui-mb-none">
+                                                <thead>
+                                                    <tr>
+                                                        <th style="width:30%; text-align: left;"></th>
+                                                        <th style="width:35%; text-align: center;">PRINT PO</th>
+                                                        <th style="width:35%; text-align: center;">EMAIL PO</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td><strong>ALL Vendors</strong></td>
+                                                        <td class="pui-text-center">
+                                                            <a href="#" class="pui-me-10px pui-link">Single</a>
+                                                            <a href="#" class="pui-link">Group</a>
+                                                        </td>
+                                                        <td class="pui-text-center">
+                                                            <a href="#" class="pui-link">Email</a>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><strong>Leonard Sloan Associates</strong></td>
+                                                        <td class="pui-text-center">
+                                                            <a href="#" class="pui-me-10px pui-link">Single</a>
+                                                            <a href="#" class="pui-link">Group</a>
+                                                        </td>
+                                                        <td class="pui-text-center">
+                                                            <a href="#" class="pui-link">Email</a>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                
                             </div>
                             <div class="section-card-with-grouped-title">
                                 <div class="section-title-grouped">
