--- a/index.html
+++ b/index.html
@@ -4198,11 +4198,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                             <div
                                                                 class="pui-flex pui-align-items-center pui-justify-content-between">
                                                                 <label>Release Date</label>
-                                                                <div class="pui-ms-5px">
-                                                                    <input type="checkbox" id="releaseComplete">
-                                                                    <label for="releaseComplete"
-                                                                        class="checkmark pui-mb-none"></label>
-                                                                </div>
+                                                                
                                                             </div>
                                                             <div class="input-group">
                                                                 <div class="right-action-group">
@@ -4294,7 +4290,14 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                 </div>
 
                                                 <div class="form-group">
-                                                    <label>Local Art Path</label>
+                                                    <div class="pui-flex pui-align-items-center pui-justify-content-between">
+<label>Local Art Path</label>
+<div class="pui-ms-5px">
+                                                                    <input type="checkbox" id="followupComplete">
+                                                                    <label for="followupComplete" class="checkmark pui-mb-none"></label>
+                                                                </div>
+                                                    </div>
+                                                    
                                                     <div class="right-action-group">
                                                         <input type="text" class="form-control"
                                                             value="N:\Nance Solutions Inc\Screen Printing\125466 2025 Summer Lion Flag T-Shirt"
@@ -4333,7 +4336,13 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                 </div>
 
                                                 <div class="form-group">
+                                                              <div class="pui-flex pui-align-items-center pui-justify-content-between">
                                                     <label>Confirmation Notes</label>
+                                                    <div class="pui-ms-5px">
+                                                                    <input type="checkbox" id="followupComplete">
+                                                                    <label for="followupComplete" class="checkmark pui-mb-none"></label>
+                                                                </div>
+                                                    </div>
                                                     <textarea class="form-control" rows="3"
                                                         placeholder="Enter confirmation notes..."></textarea>
                                                 </div>
@@ -4426,7 +4435,14 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                 <div class="pui-row">
                                                     <div class="pui-col-md-6">
                                                         <div class="form-group">
+                                                            <div class="pui-flex pui-align-items-center pui-justify-content-between">
                                                             <label>Factory Ship Date</label>
+                                                            <div class="pui-ms-5px">
+                                                                <input type="checkbox" id="factoryShipComplete">
+                                                                <label for="factoryShipComplete"
+                                                                    class="checkmark pui-mb-none"></label>
+                                                            </div>
+                                                            </div>
                                                             <div class="input-group" style="max-width: 400px;">
                                                                 <div class="right-action-group"
                                                                     style="flex: 1; margin-right: 10px;">
@@ -4453,7 +4469,13 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                     </div>
                                                     <div class="pui-col-md-6">
                                                         <div class="form-group">
+                                                            <div class="pui-flex pui-align-items-center pui-justify-content-between">
                                                             <label>Pickup Date</label>
+                                                            <div class="pui-ms-5px">
+                                                                <input type="checkbox" id="pickupDateComplete">
+                                                                <label for="pickupDateComplete" class="checkmark pui-mb-none"></label>
+                                                            </div>
+                                                            </div>
 
                                                             <div class="right-action-group" style="flex: 1;">
                                                                 <input type="text" class="form-control" placeholder="">
@@ -4618,9 +4640,16 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                     <div class="pui-col-md-4">
                                                         <!-- Factory Invoice -->
                                                         <div class="form-group">
+                                                            <div class="pui-flex pui-align-items-center pui-justify-content-between">
                                                             <label>
                                                                 Factory Invoice
                                                             </label>
+                                                            <div class="pui-ms-5px">
+                                                                <input type="checkbox" id="factoryInvoiceComplete">
+                                                                <label for="factoryInvoiceComplete"
+                                                                    class="checkmark pui-mb-none"></label>
+                                                                    </div>
+                                                            </div>
                                                             <div class="right-action-group" style="max-width: 300px;">
                                                                 <input type="text" class="form-control">
                                                             </div>
@@ -4630,9 +4659,17 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                     <div class="pui-col-md-8">
                                                         <!-- Quickbooks Invoice -->
                                                         <div class="form-group">
+                                                            <div class="pui-flex pui-align-items-center pui-justify-content-between">
                                                             <label>
                                                                 Quickbooks Invoice
                                                             </label>
+                                                            <div class="pui-ms-5px">
+                                                                <input type="checkbox" id="quickbooksInvoiceComplete">
+                                                                <label for="quickbooksInvoiceComplete"
+                                                                    class="checkmark pui-mb-none"></label>
+                                                            </div>
+                                                            </div>
+
                                                             <div class="right-action-group"
                                                                 style="max-width: 300px; display: flex;">
                                                                 <input type="text" class="form-control"
@@ -4664,7 +4701,14 @@ Monograms is not responsible for damages to customer provided items. There is an
 
                                                 <!-- Notes -->
                                                 <div class="form-group">
+                                                    <div class="pui-flex pui-align-items-center pui-justify-content-between">
                                                     <label>Notes</label>
+<div class="pui-ms-5px">
+                                                                    <input type="checkbox" id="followupComplete">
+                                                                    <label for="followupComplete" class="checkmark pui-mb-none"></label>
+                                                                </div>
+                                                    </div>
+
                                                     <textarea class="form-control" rows="3"></textarea>
                                                 </div>
 
