--- a/index.html
+++ b/index.html
@@ -4474,7 +4474,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                                             <line x1="3" y1="10" x2="21" y2="10"></line>
                                                                         </svg>
                                                                     </button>
-                                                                    <div class="pui-ms-10px">OR</div>
+                                                                    <div class="pui-ms-10px" style="color: red">OR</div>
                                                                 </div>
 
                                                             </div>
