--- a/index.html
+++ b/index.html
@@ -4562,12 +4562,12 @@ Monograms is not responsible for damages to customer provided items. There is an
                                         <div class="pui-col-md-6">
 
                                             <div class="section-card">
-                                                <strong>Qty Ordered: 860</strong>
+                                                <!-- <strong>Qty Ordered: 860</strong> -->
                                                 <!-- Qty. Shipped -->
                                                 <div class="form-group">
                                                     <label>
                                                         <img class="label-validation-icon" src="assets/images/icon_caution.gif">
-                                                        Qty. Shipped
+                                                        Qty. Shipped (Qty Ordered: 860)
                                                     </label>
                                                     <div class="right-action-group" style="max-width: 150px;">
                                                         <input type="number" class="form-control" value="0">
