--- a/index.html
+++ b/index.html
@@ -4613,7 +4613,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                 <!-- Freight Total -->
                                                 <div>
                                                     <div class="pui-row">
-                                                        <div class="pui-col-md-3">
+                                                        <div class="pui-col-md-5">
                                                             <div class="form-group">
                                                                 <label>
                                                                     <img class="label-validation-icon" src="assets/images/icon_caution.gif">
@@ -4641,10 +4641,10 @@ Monograms is not responsible for damages to customer provided items. There is an
 
                                                             </div>
                                                         </div>
-                                                        <div class="pui-col-md-4">
+                                                        <div class="pui-col-md-12">
                                                             <div class="form-group">
-                                                                <label>Total Freight Cost:</label>
-                                                                <strong class="pui-text-success">$0.00</strong>
+                                                                <label>Total Freight Cost: <strong class="pui-text-success">$0.00</strong></label>
+                                                                
                                                             </div>
                                                         </div>
                                                     </div>
@@ -4653,7 +4653,7 @@ Monograms is not responsible for damages to customer provided items. There is an
 
 
                                                 <div class="pui-row">
-                                                    <div class="pui-col-md-4">
+                                                    <div class="pui-col-md-5">
                                                         <!-- Factory Invoice -->
                                                         <div class="form-group">
                                                             <div class="pui-flex pui-align-items-center">
@@ -4673,7 +4673,7 @@ Monograms is not responsible for damages to customer provided items. There is an
 
                                                         </div>
                                                     </div>
-                                                    <div class="pui-col-md-8">
+                                                    <div class="pui-col-md-7">
                                                         <!-- Quickbooks Invoice -->
                                                         <div class="form-group">
                                                             <div class="pui-flex pui-align-items-center">
@@ -4704,10 +4704,10 @@ Monograms is not responsible for damages to customer provided items. There is an
                                                 </div>
                                             </div>
                                             <div class="section-card pui-mt-10px">
-                                                <!-- Create PO File -->
+                                                <!-- Attach PO File -->
                                                 <div class="form-group">
                                                     <label>
-                                                        <img class="label-validation-icon" src="assets/images/icon_caution.gif">Create PO File</label>
+                                                        <img class="label-validation-icon" src="assets/images/icon_caution.gif">Attach PO File</label>
                                                     <div class="right-action-group" style="max-width: 400px;">
                                                         <div class="input-group">
                                                             <input type="file" class="form-control" accept=".pdf"
