--- a/index.html
+++ b/index.html
@@ -4822,7 +4822,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                     <div class="pui-row">
                                         <div class="pui-col-md-6">
                                             <div class="section-card">
-                                                <h4>Billing</h4>
+                                                <h4 class="section-heading">Billing Address</h4>
                                                 <div class="form-group">
                                                     <label>Company</label>
                                                     <input type="text" class="form-control">
@@ -4859,7 +4859,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                         </div>
                                         <div class="pui-col-md-6">
                                             <div class="section-card">
-                                                <h4>Shipping</h4>
+                                                <h4 class="section-heading">Shipping Address</h4>
                                                 <div class="form-group">
                                                     <label>Company</label>
                                                     <input type="text" class="form-control">
@@ -4896,8 +4896,8 @@ Monograms is not responsible for damages to customer provided items. There is an
                                         </div>
                                     </div>
 
-                                    <div class="section-card pui-mt-20px">
-                                        <h4>Contact Numbers</h4>
+                                    <div class="section-card pui-mt-10px">
+                                        <h4 class="section-heading">Contact Numbers</h4>
                                         <div class="pui-row">
                                             <div class="pui-col-md-6">
 
