--- a/index.html
+++ b/index.html
@@ -4956,6 +4956,7 @@ Monograms is not responsible for damages to customer provided items. There is an
                                         </div>
                                     </div>
                                     <div class="section-card pui-mt-10px">
+                                        <h4 class="pui-mb-5px">Price</h4>
                                         <div class="data-table-container">
                                             <table class="data-table">
                                                 <colgroup>
