--- a/customer/dashboard.html
+++ b/customer/dashboard.html
@@ -68,10 +68,10 @@
                 </div>
                 <div class="header-right">
                     <div class="user-info">
-                        <span class="user-name">Bobby Prestridge</span>
+                        <span class="user-name">Chuck McGuire</span>
                         <div class="user-avatar">
                             <div class="dropdown user-avatar-dropdown">
-                                <span class="user-avatar" id="userAvatarBtn">BP</span>
+                                <span class="user-avatar" id="userAvatarBtn">CM</span>
                                 <div class="dropdown-content" id="userDropdown" style="display:none; position:absolute; right:0; top:40px; background:#fff; border:1px solid #ddd; border-radius:6px; min-width:120px; box-shadow:0 2px 8px rgba(0,0,0,0.08); z-index:100;">
                                     <a href="login.html" class="dropdown-logout" style="display:block; padding:10px 16px; color:#d32f2f; text-decoration:none; font-weight:500;">Logout</a>
                                 </div>
